--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,14 @@
 Release Notes
 =============
 
+Alerta version 1.1.1
+--------------------
+
+*   Bug fixes to alert-snmptrap and alert console
+*   Bug fixes and enhancements to alert-query tool
+*   Added new SNMP trap test script
+*   Added severityCount to history
+
 Alerta version 1.1.0
 --------------------
 
