--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,16 @@
 Release Notes
 =============
 
+Alerta version 1.1.3
+--------------------
+
+* Added UDP and TCP syslog message receiver
+* SNMP trap handler supports custom parsers
+* Some enhancements and bug fixes to urlmon
+* New alert status widgets for dashboards
+* Changed colour of debug alerts in console
+* Moved WIP components to experimental dir
+
 Alerta version 1.1.2
 --------------------
 
