--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,12 @@
 Release Notes
 =============
 
+Alerta version 1.1.8
+--------------------
+
+* Alert Ganglia simplified and bug fixed
+* Fix status count alignment in alert console
+
 Alerta version 1.1.7
 --------------------
 
