--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,15 @@
 Release Notes
 =============
 
+Alerta version 1.1.11
+---------------------
+
+* Add heartbeats to alert sources
+* Add about page with component status
+* Add heartbeat warnings to alert consoles
+* Minor enhancements to alert-sender
+* Add status counts to mgmt status response
+
 Alerta version 1.1.10
 ---------------------
 
