--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,13 @@
 Release Notes
 =============
 
+Alerta version 1.2.0
+--------------------
+
+* Sophisticated alerting on ganglia metrics
+* Minor enhancements and fixes to web console
+* ACK alerts from IRC client
+
 Alerta version 1.1.16
 ---------------------
 
