Add release notes and bump version

--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -1,6 +1,10 @@
 Release Notes
 =============
 
+Alerta version 1.2.8
+--------------------
+* Make alert-dynect.py use the same event names so that events correlate
+
 Alerta version 1.2.7
 --------------------
 
