--- a/TODO
+++ b/TODO
@@ -9,3 +9,14 @@ Version 2.0
 - sort-able and search-able alert console
 - add event correlation using ESPER or some such tool
 - divert alerts and make blackout based on suppression rules
+
+
+setup.py
+requirements.txt
+pylintrc
+Makefile
+tests
+Flask api
+bin -> /opt/alerta/bin
+alert send ... -> /usr/local/bin
+use argparse not optparse
