--- a/TODO
+++ b/TODO
@@ -7,10 +7,10 @@ Version 2.0
 - scripts use ini-based global configuration file
 - sort-able and search-able alert console
 - divert alerts and make blackout based on suppression rules
+- can remotely kill client auto-refresh using management switch
 
 Version 2.1
 ===========
 - components should automatically reconnect if broker restarts
-- add ability to remote kill client auto-refresh
 - add event correlation using ESPER or some such tool
 
